--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <li><a href="https://discord.gg/x2nn2Uk">Discord</a></li>
 <li><a href="https://github.com/dragredsim">GitHub</a></li>
 </ul>
-More to come as they come to mind, and as I work on rebranding my online presence where possible.
+More to come as they come to mind, and as I work on rebranding my online presence where possible away from my previous username. Contact me if you need to know what that is for verification or similar.
 </body>
 </html>
