--- a/3dprinter.html
+++ b/3dprinter.html
@@ -1,10 +1,5 @@
-<http>
-<head>
-</head>
-<body>
 <h1>My 3D Printer Build</h1>
 <p>Early in 2021 I bought a Creality Ender 3 v2 3D printer. It's still somewhat of a work in progress. Here I document the tweaks, changes, additions, and surrounding artifacts.</p>
-<br/>
 <h2>My designs</h2>
 <table>
 <tbody>
@@ -59,11 +54,6 @@
 <td><a href="https://www.thingiverse.com/thing:3598219">fandabrabec @ Thingiverse</a> (changes to holes for magnets)</td>
 </tr>
 <tr>
-<td>Filament sensor case</td>
-<td><a href="https://www.tinkercad.com/things/hwCJ1HqNxqW-filament-sensor-case">Tinkercad</a></td>
-<td><a href="https://www.thingiverse.com/thing:4703578">mosesIRL @ Thingiverse</a>&nbsp;(slight sizing changes to ensure screw mount fit, movement of the body in relation to the mounting holes in attempt to give straight exit to extruder)</td>
-</tr>
-<tr>
 <td>Control box</td>
 <td><a href="https://www.tinkercad.com/things/i113LQCVbbU-3d-printer-control-box">Tinkercad</a></td>
 <td>Designed from scratch. Not yet printed. Includes frame for three buttons to control the GPIO on the Pi.</td>
@@ -89,7 +79,7 @@
 <tr>
 <td>Dry box mount for IKEA SAMLA box</td>
 <td><a href="https://www.thingiverse.com/thing:3098388">TimCC @ Thingiverse</a></td>
-<td>Fits fine on the 55L SAMLA box, larger than the originally designed 22L. Tube length is ~440mm, "25mm" PVC pipe (actual inside diameter is larger). Can fit approx. 6 1KG rolls in one box!</td>
+<td>Fits fine on the 55L SAMLA box, larger than the originally designed 22L. Tube length is ~440mm, "25mm" PVC pipe (actual inside diameter is larger). Can fit approx. 5 1KG rolls in one box!</td>
 </tr>
 <tr>
 <td>Dry box feeder mount</td>
@@ -117,7 +107,7 @@
 <td>Fits Ender 3 v2 fine</td>
 </tr>
 <tr>
-<td>Z-axis upper support, filament guide holder</td>
+<td>Z-axis upper support</td>
 <td><a href="https://www.thingiverse.com/thing:4107804">Schtimpy @ Thinigiverse</a></td>
 <td>Filament guide does not really fit enclosure. Still used this version to mount, as it has a hole for an M5 screw to secure once the centre of the extrusion is tapped.</td>
 </tr>
@@ -149,7 +139,27 @@
 <tr>
 <td>General razor blade cutting tool</td>
 <td><a href="https://www.thingiverse.com/thing:665862">Paintballmagic @ Thingiverse</a></td>
-<td>Intending to remix to fix an issue I found with it</td>
+<td>Intending to remix to fix an issue I found with it (blade can slip into gap)</td>
+</tr>
+<tr>
+<td>Pi camera mount</td>
+<td><a href="https://www.thingiverse.com/thing:2886101">Modmike</a>, <a href="https://www.thingiverse.com/thing:4581788">Punix81</a> @ Thingiverse</td>
+<td>Modmike's camera enclosure, Punix's arm</td>
+</tr>
+<tr>
+<td>Thermometer casing</td>
+<td><a href="https://www.thingiverse.com/thing:4185369">flhoest @ Thingiverse</a></td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>Filament runout sensor bracket</td>
+<td><a href="https://www.thingiverse.com/thing:4576855">EnderSteve @ Thingiverse</a></td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>Filament guide bearing</td>
+<td><a href="https://www.thingiverse.com/thing:3129612">D3D_Designs @ Thingiverse</a></td>
+<td>&nbsp;</td>
 </tr>
 </tbody>
 </table>
@@ -160,3 +170,6 @@
 <p>LEDBERG light strips mounted to roof of enclosure.</p>
 <p>PSU moved outside of enclosure, short cable runs to a barrier strip inside enclosure to pass power to the printer. DANGER: can cause major electric damage if not careful! Use barrier strip cover to minimise chance of short.</p>
 <p>Paper towel holder mounted below enclosure, to allow quick bed cleaning using spray IPA.</p>
+<p>Intention to move the printer motherboard outside of its enclosure, to ensure longevity by minimising heat. Extension cables for motors and end-stops have been acquired for this.</p>
+</body>
+</html>
