--- a/3dprinter.html
+++ b/3dprinter.html
@@ -58,6 +58,11 @@
 <td><a href="https://www.tinkercad.com/things/i113LQCVbbU-3d-printer-control-box">Tinkercad</a></td>
 <td>Designed from scratch. Not yet printed. Includes frame for three buttons to control the GPIO on the Pi.</td>
 </tr>
+<tr>
+<td>Tube cap holder</td>
+<td><a href="https://www.tinkercad.com/things/831LH5ieWYX-brave-waasa/">Tinkercad</a></td>
+<td>Holds 3 PC4-M6 fittings, with short lenghts of tubing. This is for storing the cap for the tubes when not printing to avoid moisture entering the dry box.</td>
+</tr>
 </tbody>
 </table>
 <p><strong>Direct prints</strong></p>
