--- a/3dp-help-req/materials/index.html
+++ b/3dp-help-req/materials/index.html
@@ -5,13 +5,13 @@
 <body>
 <h1>3D Printer Filament Profiles</h1>
 <ul>
-<li><a href=".\generic_petg_175+%25233.xml.fdm_material" >PETG, PanTech, black (the main filament I want to get working)</a></li>
-<li><a href=".\generic_petg_175+%25232.xml.fdm_material" >PETG, generic, black</a></li>
-<li><a href=".\generic_pla_175+%25232.xml.fdm_material"  >PLA, PanTech, brown</a></li>
-<li><a href=".\generic_pla_175+%25233.xml.fdm_material"  >PLA, generic, white</a></li>
-<li><a href=".\generic_pla_175+%25234.xml.fdm_material"  >PLA, CC DIY, red</a></li>
-<li><a href=".\generic_pla_175+%25235.xml.fdm_material"  >PLA, E-DA, light blue</a></li>
-<li><a href=".\generic_pla_175+%25236.xml.fdm_material"  >PLA, CC DIY, black</a></li>
+<li><a href=".\generic_petg_175+%25233.xml">PETG, PanTech, black (the main filament I want to get working)</a></li>
+<li><a href=".\generic_petg_175+%25232.xml">PETG, generic, black</a></li>
+<li><a href=".\generic_pla_175+%25232.xml">PLA, PanTech, brown</a></li>
+<li><a href=".\generic_pla_175+%25233.xml">PLA, generic, white</a></li>
+<li><a href=".\generic_pla_175+%25234.xml">PLA, CC DIY, red</a></li>
+<li><a href=".\generic_pla_175+%25235.xml">PLA, E-DA, light blue</a></li>
+<li><a href=".\generic_pla_175+%25236.xml">PLA, CC DIY, black</a></li>
 </ul>
 </body>
 </html>
