--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <h1>Welcome!</h1>
 <h2>This is a list of links of some of my Internet presence.</h2>
 <ul>
-<li><a href="https://twitter.com/dragredsim">Twitter</a></li>
-<li><a href="https://twitch.tv/dragredsim">Twitch</a></li>
-<li><a href="https://discord.gg/x2nn2Uk">Discord</a></li>
-<li><a href="https://github.com/dragredsim">GitHub</a></li>
+  <li><del><a href="https://twitter.com/dragredsim">Twitter</a></del> (RIP)</li>
+  <li><a href="https://aus.social/@dragredsim">Mastodon</a> (@dragredsim@aus.social)</li>
+  <li><a href="https://twitch.tv/dragredsim">Twitch</a></li>
+  <li><a href="https://discord.gg/x2nn2Uk">Discord</a></li>
+  <li><a href="https://github.com/dragredsim">GitHub</a></li>
 </ul>
 More to come as they come to mind, and as I work on rebranding my online presence where possible away from my previous username. Contact me if you need to know what that is for verification or similar.
 </body>
